edition = "2023";  // successor to proto2 and proto3

package central;
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/central;central";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message SensorUpgradeTrigger {
  message EnvVarDef {
    string name = 1;

    string source_env_var = 2;
    string default_value = 3;
  }

  // A UUID that identifies this specific upgrade process.
  string upgrade_process_id = 1;

  string image = 2;
  repeated string command = 3;
  repeated EnvVarDef env_vars = 4 [lazy = true];
}
